# mo-sql-parsing

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  setuptools.json
mo_parsing/: enhancement.py  expressions.py  results.py
mo_sql_parsing/: __init__.py  formatting.py  keywords.py  operators.py  sql_parser.py  types.py  utils.py  windows.py
moz_sql_parser/: keywords.py  sql_parser.py  utils.py
packaging/: setup.py  setuptools.json
tests/: README.md  requirements.txt  smoke_test.py  test_apache_hive.py  test_athena.py  test_big_sql.py  test_bigquery.py  test_bulk_sql_formatting.py  test_commands.py  test_errors.py  test_format_and_parse.py  test_formatting.py  test_meta.py  test_mysql.py  test_null.py  test_null_as_none.py  test_oracle.py  test_postgres.py  test_redshift.py  test_resources.py  test_simple.py  test_simple_as_operators.py  test_simple_using_operators.py  test_snowflake.py  test_so_queries.py  test_sql_server.py  test_sqlglot.py
tests/so_queries/: README.md  so_queries.tar.zst
tests/sql/: dev_gold.sql  train_gold.sql
